Fixed potential winnings alignment

--- a/public/stylesheets/games/blackjack.css
+++ b/public/stylesheets/games/blackjack.css
@@ -383,3 +383,7 @@ body {
   font-size: 120%;
   letter-spacing: 1px;
 }
+
+.stake {
+  margin-bottom: 20%;
+}
